# nora_rename

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  language.md  lefthook.yml  package-lock.json  package.json  release.sh
.github/workflows/: release.yml  rust-clippy.yml  rust_build_test.yml
src/: ast.rs  base_parser.rs  chain_reader.rs  errors.rs  interpreter.rs  lexer.rs  main.rs  node.rs  parser.rs  replacer.rs  string_reader.rs  token.rs  utils.rs
src/ast/: base_parser.rs  interpreter.rs  mod.rs  nodes.rs  parser.rs
src/lib/: boolean.rs  mod.rs  number.rs  object_type.rs  string.rs  traits.rs
src/lib/types/: boolean.rs  mod.rs  number.rs  string.rs
src/nodes/: mod.rs  node_binary_operator.rs  node_content.rs  node_identifier.rs  node_number.rs
src/tokenizer/: lexer.rs  token.rs
src/utils/: chain_reader.rs  equal_utils.rs  mod.rs  string_utils.rs
