[package]
name = "nora_rename"
description = "Command line utility for renaming files in batch using regex with advanced control"
version = "0.1.3"
edition = "2021"
authors = ["Zelak <zelak312@gmail.com>"]
repository = "https://github.com/Zelak312/nora"
license = "MIT"
readme = "README.md"
exclude = [
    ".github/*",
]

[[bin]]
name = "nora_rename"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
owo-colors = "3.5.0"
regex = "1.6.0"