[package]
name = "nora_rename"
description = "Command line utility for renaming files in batch using regex with advanced control"
version = "2.0.0"
edition = "2021"
authors = ["Zelak <zelak312@gmail.com>"]
repository = "https://github.com/Zelak312/nora"
license = "MIT"
readme = "README.md"
exclude = [".github/*"]

[[bin]]
name = "nora"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
indexmap = "2.0.0"
owo-colors = "3.5.0"
regex = "1.9.4"
